<?xml version="1.0" encoding="utf-8"?><!-- ENGLISH -->
<resources>
  <string name="app_name">guidepost</string>
  <string name="remember">remember</string>
  <string name="location">Location:</string>
  <string name="author">Author:</string>
  <string name="cancel">Cancel</string>
  <string name="send">Send</string>
  <string name="gpl">Guidepost  Copyright (C) 2013-2019  Michal Grezl \n
This program comes with ABSOLUTELY NO WARRANTY; for details see license.\n
This is free software, and you are welcome to redistribute it under certain conditions; see license for details.
\n
http://www.gnu.org/licenses/gpl.txt
\n
\n
Leaderboard:\n
 visit http://api.openstreetmap.social/table/leaderboard\n
</string>
  <string name="exit">Exit</string>
  <string name="about">How to use:\nTo use this application, 
you must use share with ... function from other apps such as camera.
</string>

  <string name="selectedfile">Selected File :</string>
  <string name="uploaderror">Upload error: </string>
  <string name="uploaded">Picture was uploaded successfully</string>
  <string name="uploading">Uploading Picture…</string>
  <string name="wrongcoords">Coordinates cannot be 0,0 (there is no guidepost in the middle of the ocean!)</string>
  <string name="bye">Bye</string>
  <string name="tryagain">Try again</string>
  <string name="uploadfailed">Upload failed</string>
  <string name="lat">lat:</string>
  <string name="lon">lon:</string>
  <string name="toobig">File if too big, limit is 10MB</string>


  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="nav_header_subtitle">Project Guidepost map viewer</string>
  <string name="nav_header_title">Guidepost</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="title_activity_basic">basic</string>
  <string name="title_section1">Section 1</string>
  <string name="title_section2">Section 2</string>
  <string name="title_section3">Section 3</string>

  <string name="menu_home">Home</string>
  <string name="action_about">About</string>
  <string name="menu_about">About</string>
  <string name="menu_house">House</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="uploader_name">android</string>
  <string name="menu_map">Map</string>


</resources>
