<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/tableLayout1"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:stretchColumns="*">

 <TableRow
   android:id="@+id/tableRow0"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">

  <ProgressBar
    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
    android:layout_span="4"
    android:id="@+id/pb_upload"
    android:indeterminate="false"
    android:max="100"
    android:progress="0" />
 </TableRow>

 <TableRow
   android:id="@+id/tableRow1"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">

  <TextView
    android:id="@+id/TextView"
    android:layout_column="0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/author" />

  <EditText
    android:id="@+id/text_author"
    android:layout_column="1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/uploader_name"
    android:inputType="text"
    android:importantForAutofill="no" />

  <CheckBox
    android:id="@+id/check_remember"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="2" />

  <TextView
    android:id="@+id/tv_remember"
    android:layout_column="3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/remember" />
 </TableRow>

 <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
  <TextView android:id="@+id/tv_lat"  android:layout_column="0" android:layout_width="wrap_content" android:layout_height="wrap_content" 
    android:text="@string/lat"
  />
  <EditText android:id="@+id/lat_coord" android:layout_column="1" android:layout_width="115dip" android:layout_height="wrap_content" android:text="0"/>
  <TextView android:id="@+id/tv_lon"  android:layout_column="2" android:layout_width="wrap_content" android:layout_height="wrap_content" 
    android:text="@string/lon"
  />
  <EditText android:id="@+id/lon_coord" android:layout_column="3" android:layout_width="115dip" android:layout_height="wrap_content" android:text="0"/>
 </TableRow>

 <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
  <Button android:id="@+id/button_cancel" android:layout_column="0" android:layout_span="2" android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="@string/cancel"
  />
  <Button android:id="@+id/button_send"   android:layout_column="2" android:layout_span="2" android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="@string/send"
  />
 </TableRow>
 <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">

   <ImageView android:id="@+id/image" 
     android:layout_span="2" 
     android:layout_width="80dp" android:layout_height="fill_parent"
     android:scaleType="centerCrop"
     android:background="#aaaaaa"
   />
   <ImageView android:id="@+id/image_map" 
     android:layout_span="2"
     android:layout_width="80dp" android:layout_height="fill_parent"
     android:background="#bbbbbb"
   />
 </TableRow>
</TableLayout>
